fix: horizontal scroll bar on topics in drawer

--- a/base-theme/assets/css/main.scss
+++ b/base-theme/assets/css/main.scss
@@ -360,3 +360,7 @@ article.content {
 .color-red {
   color: $highlight-red;
 }
+
+.overflow-x-hidden {
+  overflow-x: hidden;
+}
